# edu-gestao

./: .gitignore  README.md  pyproject.toml  requirements.txt
main/: __init__.py  app.py  seeds.py
migrations/versions/: 48c79a674166_add_school_type_enum_to_school.py  59f6ee8ff1bb_add_deleted_at_to_shools.py  6d2a1ea04f06_initial_migration.py  e15d909a9c0e_add_biginteger_type_to_school_id.py
src/config/: db_config.py
src/domain/: address.py
src/domain/enums/: class_grade.py  school_type.py
src/models/: __init__.py  associations.py  role.py  school.py  school_class.py  user.py
src/models/config/: db_config.py
src/repositories/: school_repository.py  user_repository.py
src/routes/: login.py  schools.py  users.py
src/services/: auth_service.py  school_service.py
src/utils/: decorators.py  password_utils.py
