[project]
name = "edu-gestao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.17.2",
    "blinker==1.9.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-migrate==4.1.0",
    "flask-principal==0.4.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "greenlet==3.3.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "libpass==1.9.3",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "packaging==25.0",
    "psycopg2-binary==2.9.11",
    "pyjwt==2.10.1",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "sqlalchemy==2.0.45",
    "sqlparse==0.5.4",
    "termcolor==3.2.0",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "werkzeug==3.1.4",
    "wheel==0.45.1",
    "wtforms==3.2.1",
]
